--- a/PMgo/addUser.xaml
+++ b/PMgo/addUser.xaml
@@ -8,14 +8,13 @@
                 <DropShadowEffect/>
             </TextBox.Effect>
         </TextBox>
-        <Label Content="Manage Users" HorizontalAlignment="Left" VerticalAlignment="Top" Width="396" Height="61" FontSize="36" Margin="132,23,0,0" FontFamily="Segoe UI Light"/>
+        <Label Content="Manage Users" HorizontalAlignment="Left" VerticalAlignment="Top" Width="229" Height="61" FontSize="36" Margin="124,47,0,0" FontFamily="Segoe UI Light"/>
         <Label Content="User Name" HorizontalAlignment="Left" Margin="9,142,0,0" VerticalAlignment="Top" Height="41" Width="138" FontSize="20"/>
         <Label Content="Title" HorizontalAlignment="Left" Margin="9,188,0,0" VerticalAlignment="Top" Height="41" Width="165" FontSize="20"/>
         <Label Content="email" HorizontalAlignment="Left" Margin="10,234,0,0" VerticalAlignment="Top" Height="41" Width="103" FontSize="20"/>
         <Label Content="Phone Number" HorizontalAlignment="Left" Margin="9,282,0,0" VerticalAlignment="Top" Height="41" Width="165" FontSize="20"/>
         <Label Content="Temp Password" HorizontalAlignment="Left" Margin="8,328,0,0" VerticalAlignment="Top" Height="41" Width="166" FontSize="20"/>
         <Button x:Name="addUserControl" Content="Add User" HorizontalAlignment="Left" Margin="467,452,0,0" VerticalAlignment="Top" Width="145" Height="50" FontSize="18" Click="Button_Click_1" />
-        <Image HorizontalAlignment="Left" Height="90" Margin="10,13,0,0" VerticalAlignment="Top" Width="152" Source="egi-consulting-project-management.jpg"/>
         <Label Content="Office Location" HorizontalAlignment="Left" Margin="8,374,0,0" VerticalAlignment="Top" Height="41" Width="166" FontSize="20"/>
         <TextBox x:Name="emailField" HorizontalAlignment="Left" Height="41" Margin="166,234,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="248" FontSize="18" KeyboardNavigation.TabIndex="2">
             <TextBox.Effect>
@@ -37,7 +36,7 @@
                 <DropShadowEffect/>
             </TextBox.Effect>
         </TextBox>
-        <ListBox x:Name="userNameBox" HorizontalAlignment="Left" Height="312" Margin="477,123,0,0" VerticalAlignment="Top" Width="254" SelectionChanged="ListBox_SelectionChanged_1" FontSize="18" FontFamily="Segoe UI Light" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Foreground="White">
+        <ListBox x:Name="userNameBox" HorizontalAlignment="Left" Height="312" Margin="477,123,0,0" VerticalAlignment="Top" Width="254" SelectionChanged="ListBox_SelectionChanged_1" FontSize="18" FontFamily="Segoe UI Light" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Foreground="Black">
             <ListBox.Effect>
                 <DropShadowEffect/>
             </ListBox.Effect>
@@ -56,15 +55,17 @@
             </TextBox.Effect>
         </TextBox>
         <Button Content="New User" HorizontalAlignment="Left" Margin="17,452,0,0" VerticalAlignment="Top" Width="145" Height="50" FontSize="18" Click="Button_Click_4"/>
-        <ListBox x:Name="assignedUsersBlock" HorizontalAlignment="Left" Height="312" Margin="839,123,0,0" VerticalAlignment="Top" Width="254" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}">
+        <ListBox x:Name="assignedUsersBox" HorizontalAlignment="Left" Height="312" Margin="839,123,0,0" VerticalAlignment="Top" Width="254" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" FontSize="18">
             <ListBox.Effect>
                 <DropShadowEffect/>
             </ListBox.Effect>
         </ListBox>
-        <Button Content="Assign ---&gt;" HorizontalAlignment="Left" Height="48" Margin="741,201,0,0" VerticalAlignment="Top" Width="88" FontSize="14" Background="#FF64B970"/>
+        <Button Content="Assign ---&gt;" HorizontalAlignment="Left" Height="48" Margin="741,201,0,0" VerticalAlignment="Top" Width="88" FontSize="14" Background="#FF64B970" Click="Button_Click_6"/>
         <Button Content="&lt;--Remove" HorizontalAlignment="Left" Height="48" Margin="741,282,0,0" VerticalAlignment="Top" Width="88" FontSize="14" Click="Button_Click_5" Background="#FF64B970"/>
         <Label Content="Assigned Users&#xD;&#xA;" HorizontalAlignment="Left" Margin="896,88,0,0" VerticalAlignment="Top" Width="148" Height="42" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Height="58" Margin="535,13,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="480"/>
+        <TextBlock x:Name="projectNameBox" HorizontalAlignment="Left" Height="58" Margin="535,25,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="480" FontSize="36" TextAlignment="Center"/>
+        <TextBlock x:Name="current_txt" HorizontalAlignment="Left" Height="37" Margin="66,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218" FontSize="16"/>
+        <Label Content="User:" HorizontalAlignment="Left" Height="34" Margin="17,13,0,0" VerticalAlignment="Top" Width="62" FontSize="16"/>
 
     </Grid>
 </Window>
