--- a/PMgo/viewDoc.xaml
+++ b/PMgo/viewDoc.xaml
@@ -15,8 +15,9 @@
         </TextBox>
         <TextBox x:Name="locationBox" Grid.Column="1" HorizontalAlignment="Left" Height="31" Margin="336,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="189" Visibility="Hidden"/>
         <TextBlock x:Name="docName" Grid.Column="1" HorizontalAlignment="Left" Height="36" Margin="96,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="288" FontSize="22" TextAlignment="Center"/>
-        <Button Content="Close" Grid.Column="1" HorizontalAlignment="Left" Height="49" Margin="129,547,0,0" VerticalAlignment="Top" Width="244" FontSize="20" Click="Button_Click_1"/>
+        <Button Content="Close" Grid.Column="1" HorizontalAlignment="Left" Height="49" Margin="27,539,0,0" VerticalAlignment="Top" Width="244" FontSize="20" Click="Button_Click_1"/>
         <ScrollBar x:Name="docTextScroll" Grid.Column="1" HorizontalAlignment="Left" Margin="438,107,0,0" VerticalAlignment="Top" Height="418" ValueChanged="docTextScroll_ValueChanged" />
+        <CheckBox Content="Mark for Review" Grid.Column="1" HorizontalAlignment="Left" Margin="294,539,0,0" VerticalAlignment="Top" Height="29" Width="175" FontSize="18"/>
 
 
     </Grid>
