added Modify Task, subtask, milestone
User can change data (except for name) and hit save.  We need to add a
hidden field with id's to uniquely identify milestone, task and subtask,
but we are running out of time!  LOL  So, right now, we can only modify
the data....Not the name.

--- a/PMgo/itemWindow.xaml
+++ b/PMgo/itemWindow.xaml
@@ -50,7 +50,7 @@
             </TreeView.Effect>
         </TreeView>
 
-        <Button Content="Save" HorizontalAlignment="Left" Height="34" Margin="26,537,0,0" VerticalAlignment="Top" Width="132" FontSize="22" >
+        <Button Content="Save" HorizontalAlignment="Left" Height="34" Margin="26,537,0,0" VerticalAlignment="Top" Width="132" FontSize="22" Click="Button_Click_3" >
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="White" Offset="0"/>
