--- a/PMgo/AddProject.xaml
+++ b/PMgo/AddProject.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PMgo.AddProject"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Add a Project" Height="580" Width="1150" WindowStartupLocation="CenterScreen">
+        Title="Add a Project" Height="580" Width="1150" WindowStartupLocation="CenterScreen" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
     <Grid Margin="0,0,2,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="6*"/>
@@ -21,15 +21,10 @@
         <Label Content=" Description" HorizontalAlignment="Left" Margin="0,281,0,0" VerticalAlignment="Top" Height="41" Width="124" FontSize="20" Grid.Column="1"/>
         <Button Content="Add Project" Grid.Column="2" HorizontalAlignment="Left" Margin="10,419,0,0" VerticalAlignment="Top" Width="165" Height="51" FontSize="18" Click="Button_Click_1"/>
         <Image HorizontalAlignment="Left" Height="79" Margin="771,10,0,0" VerticalAlignment="Top" Width="132" Source="egi-consulting-project-management.jpg" Grid.Column="2"/>
-        <ListBox x:Name="projListBox" Grid.Column="2" HorizontalAlignment="Left" Height="375" Margin="465,95,0,0" VerticalAlignment="Top" Width="328" Background="Black" Foreground="White" SelectionChanged="ListBox_SelectionChanged_1" FontSize="18" FontFamily="Segoe UI Light"/>
+        <ListBox x:Name="projListBox" Grid.Column="2" HorizontalAlignment="Left" Height="375" Margin="465,95,0,0" VerticalAlignment="Top" Width="328" Background="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}" Foreground="Black" SelectionChanged="ListBox_SelectionChanged_1" FontSize="18"/>
         <Label Content="Current Projects" Grid.Column="2" HorizontalAlignment="Left" Margin="549,45,0,0" VerticalAlignment="Top" Width="176" Height="44" FontSize="20"/>
-        <Button Content="Button" Grid.Column="2" HorizontalAlignment="Left" Margin="198,421,0,0" VerticalAlignment="Top" Width="165" Height="51" />
-        <Label Content="Current User:" HorizontalAlignment="Left" Margin="3,0,0,0" VerticalAlignment="Top" Width="115" FontSize="18" FontFamily="Segoe UI Light" FontWeight="Bold" Foreground="#FFFB0C0C" Grid.ColumnSpan="2">
-            <Label.Effect>
-                <DropShadowEffect Color="#FFF9F5F5"/>
-            </Label.Effect>
-        </Label>
-        <TextBlock x:Name="current_txt" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="112,6,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="171" FontSize="18" FontFamily="Segoe UI Light" Grid.ColumnSpan="2" FontWeight="Bold" Foreground="#FFFB0C0C">
+        <Button Content="Cancel" Grid.Column="2" HorizontalAlignment="Left" Margin="198,421,0,0" VerticalAlignment="Top" Width="165" Height="51" FontSize="18" Click="Button_Click_2" />
+        <TextBlock x:Name="current_txt" Grid.Column="1" HorizontalAlignment="Left" Height="21" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="171" FontSize="18" FontFamily="Segoe UI Light" FontWeight="Bold" Foreground="#FFFB0C0C" Visibility="Hidden">
             <TextBlock.Effect>
                 <DropShadowEffect Color="#FFFBF5F5"/>
             </TextBlock.Effect>
